Ejercicio Integracion Completado, me falto el commit!

--- a/clases/ds-fundamentals/semana_2/json_api_key.ipynb
+++ b/clases/ds-fundamentals/semana_2/json_api_key.ipynb
@@ -14,28 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tu API Key de OpenWeatherMap (reemplaza con la tuya)\n",
-    "api_key = 'API_KEY_TUYO'\n",
-    "city_name = \"Paris\"  # Puedes cambiar el nombre de la ciudad aquí\n",
+    "api_key = '0c5f7e05b3ad5791b779a43174d7a33e'\n",
+    "city_name = \"London\"  # Puedes cambiar el nombre de la ciudad aquí\n",
     "url = f\"http://api.openweathermap.org/data/2.5/weather?q={city_name}&appid={api_key}&units=metric\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['coord', 'weather', 'base', 'main', 'visibility', 'wind', 'clouds', 'dt', 'sys', 'timezone', 'id', 'name', 'cod'])"
+       "dict_keys(['coord', 'weather', 'base', 'main', 'visibility', 'wind', 'rain', 'clouds', 'dt', 'sys', 'timezone', 'id', 'name', 'cod'])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Datos del clima actual en Paris\n"
+      "Datos del clima actual en Asuncion\n"
      ]
     },
     {
@@ -95,16 +95,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11.57</td>\n",
-       "      <td>11.21</td>\n",
-       "      <td>10.68</td>\n",
-       "      <td>12.28</td>\n",
-       "      <td>1012</td>\n",
-       "      <td>93</td>\n",
-       "      <td>3.09</td>\n",
-       "      <td>330</td>\n",
-       "      <td>Clouds</td>\n",
-       "      <td>overcast clouds</td>\n",
+       "      <td>22.69</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>22.69</td>\n",
+       "      <td>22.69</td>\n",
+       "      <td>1011</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Rain</td>\n",
+       "      <td>light rain</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -112,13 +112,13 @@
       ],
       "text/plain": [
        "   temperature  feels_like  temp_min  temp_max  pressure  humidity  \\\n",
-       "0        11.57       11.21     10.68     12.28      1012        93   \n",
+       "0        22.69       23.18     22.69     22.69      1011        83   \n",
        "\n",
        "   wind_speed  wind_deg weather_main weather_description  \n",
-       "0        3.09       330       Clouds     overcast clouds  "
+       "0        2.57        70         Rain          light rain  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,11 +131,84 @@
     "print(\"Datos del clima actual en\", city_name)\n",
     "df.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>feels_like</th>\n",
+       "      <th>temp_min</th>\n",
+       "      <th>temp_max</th>\n",
+       "      <th>pressure</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>wind_deg</th>\n",
+       "      <th>weather_main</th>\n",
+       "      <th>weather_description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.69</td>\n",
+       "      <td>23.18</td>\n",
+       "      <td>22.69</td>\n",
+       "      <td>22.69</td>\n",
+       "      <td>1011</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Rain</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   temperature  feels_like  temp_min  temp_max  pressure  humidity  \\\n",
+       "0        22.69       23.18     22.69     22.69      1011        83   \n",
+       "\n",
+       "   wind_speed  wind_deg weather_main weather_description  \n",
+       "0        2.57        70         Rain          light rain  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mitic-data-science-team-1-septiembre-2024",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
