--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
@@ -292,6 +292,50 @@
     "ventas_mayores_25_precio_menor_05 = df[(df['cantidad'] > 2.0) & (df['precio_unitario'] < 10.0)]\n",
     "print(ventas_mayores_25_precio_menor_05)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([0, 3, 4, 5, 7, 10, 11, 12, 14, 15, 17, 19], dtype='int64')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['producto']=='Producto_B',:]\n",
+    "\n",
+    "df.dropna().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True,  True,  True, False,  True, False,\n",
+       "       False,  True,  True,  True, False,  True,  True, False,  True,\n",
+       "       False,  True])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index.isin(df.dropna().index)"
+   ]
   }
  ],
  "metadata": {
