--- a/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
+++ b/clases/ds-fundamentals/ejercicios de integración/ejercicio_integracion_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "4  2023-01-05  Producto_A       1.0             12.0   12.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "producto                         20        0      0.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "18  2023-01-19  Producto_C       7.0              NaN    NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "16  2023-01-17  Producto_A       8.0             10.0    NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "16  2023-01-17  Producto_A       8.0             10.0   80.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "17  2023-01-18  Producto_B       4.0             11.0   44.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,14 +620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/wzc8k1dn7bsgd14yfq9md5l40000gn/T/ipykernel_95655/1627652108.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\guill\\AppData\\Local\\Temp\\ipykernel_15868\\1627652108.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -716,7 +716,7 @@
        "17  2023-01-18  Producto_B       4.0             11.0   44.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "        True, False])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "Name: producto, dtype: bool"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "producto                         17        0     0.00"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +974,7 @@
        "19  2023-01-20  Producto_D       6.0             15.0   90.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
        "18  2023-01-19  Producto_C       7.0              NaN    NaN"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "22.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "1.6"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "Name: producto, dtype: bool"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
        "Name: precio_unitario, dtype: bool"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
        "Name: cantidad, dtype: bool"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
        "18  2023-01-19  Producto_C       7.0              NaN    NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "[-7.4, -5.4]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
        "18  2023-01-19  Producto_C       7.0             -5.4    NaN"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
        "18  2023-01-19  Producto_C       7.0             -5.4  -37.8"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
        "producto                         17        0     0.00"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1728,7 @@
        "total                            16        0      0.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
        "Name: cantidad, dtype: float64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1789,7 @@
        "Name: total, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
        "Name: precio_unitario, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
