--- a/clases/ds-fundamentals/semana_3/agrupacion_pandas_ejercicio.ipynb
+++ b/clases/ds-fundamentals/semana_3/agrupacion_pandas_ejercicio.ipynb
@@ -241,24 +241,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000025A0FD3C110>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Tm Pos        PTS       AST       TRB\n",
+      "0    ATL   C   7.000000  0.700000  5.375000\n",
+      "1    ATL  PF  13.100000  1.200000  6.500000\n",
+      "2    ATL  PG  10.433333  4.066667  1.700000\n",
+      "3    ATL  SF   8.400000  1.083333  3.283333\n",
+      "4    ATL  SG   7.483333  1.833333  2.166667\n",
+      "..   ...  ..        ...       ...       ...\n",
+      "156  WAS   C   8.680000  1.240000  3.980000\n",
+      "157  WAS  PF   8.560000  1.360000  3.800000\n",
+      "158  WAS  PG   5.166667  2.483333  2.316667\n",
+      "159  WAS  SF   7.266667  1.500000  3.066667\n",
+      "160  WAS  SG  11.050000  2.650000  2.675000\n",
+      "\n",
+      "[161 rows x 5 columns]\n"
+     ]
     }
    ],
    "source": [
     "# Agrupar los datos por equipos\n",
     "grouped = df.groupby(['Tm', 'Pos'])\n",
-    "\n"
+    "\n",
+    "\n",
+    "# Paso 1: Agrupar los datos por equipo y posición\n",
+    "agrupado_por_equipo_posicion = df.groupby(['Tm', 'Pos']).agg({\n",
+    "    'PTS': 'mean',  # Promedio de puntos\n",
+    "    'AST': 'mean',  # Promedio de asistencias\n",
+    "    'TRB': 'mean'   # Promedio de rebotes\n",
+    "}).reset_index()\n",
+    "\n",
+    "print(agrupado_por_equipo_posicion)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Tm Pos  Eficiencia Promedio\n",
+      "0    ATL   C            13.075000\n",
+      "1    ATL  PF            20.800000\n",
+      "2    ATL  PG            16.200000\n",
+      "3    ATL  SF            12.766667\n",
+      "4    ATL  SG            11.483333\n",
+      "..   ...  ..                  ...\n",
+      "156  WAS   C            13.900000\n",
+      "157  WAS  PF            13.720000\n",
+      "158  WAS  PG             9.966667\n",
+      "159  WAS  SF            11.833333\n",
+      "160  WAS  SG            16.375000\n",
+      "\n",
+      "[161 rows x 3 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asosa\\AppData\\Local\\Temp\\ipykernel_10684\\1470240936.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  eficiencia_por_equipo_posicion = df.groupby(['Tm', 'Pos']).apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 2: Calcular la eficiencia de los jugadores\n",
+    "# La eficiencia se define como la suma de puntos, asistencias y rebotes por juego.\n",
+    "df['eficiencia'] = df['PTS'] + df['AST'] + df['TRB']\n",
+    "# Agrupar por equipo y posición, y calcular la eficiencia promedio por posición en cada equipo\n",
+    "eficiencia_por_equipo_posicion = df.groupby(['Tm', 'Pos']).apply(\n",
+    "    lambda x: pd.Series({\n",
+    "        'Eficiencia Promedio': x['eficiencia'].mean()\n",
+    "    })\n",
+    ").reset_index()\n",
+    "print(eficiencia_por_equipo_posicion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Tm Pos              Player  eficiencia\n",
+      "0    ATL   C        Clint Capela        23.9\n",
+      "1    ATL  PF        John Collins        20.8\n",
+      "2    ATL  PG          Trae Young        39.4\n",
+      "3    ATL  SF     De'Andre Hunter        21.0\n",
+      "4    ATL  SG     Dejounte Murray        31.9\n",
+      "..   ...  ..                 ...         ...\n",
+      "156  WAS   C  Kristaps Porziņģis        34.3\n",
+      "157  WAS  PF          Kyle Kuzma        32.1\n",
+      "158  WAS  PG        Monte Morris        19.0\n",
+      "159  WAS  SF         Deni Avdija        18.4\n",
+      "160  WAS  SG        Bradley Beal        32.5\n",
+      "\n",
+      "[161 rows x 4 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\asosa\\AppData\\Local\\Temp\\ipykernel_10684\\3724766706.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  jugador_mas_eficiente = df.groupby(['Tm', 'Pos']).apply(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paso 3: Identificar al jugador más eficiente por equipo y posición\n",
+    "jugador_mas_eficiente = df.groupby(['Tm', 'Pos']).apply(\n",
+    "    lambda x: x.loc[x['eficiencia'].idxmax(), ['Player', 'eficiencia']]\n",
+    ").reset_index()\n",
+    "\n",
+    "print(jugador_mas_eficiente)"
    ]
   }
  ],
