comentarios a las correlaciones agregados

--- a/clases/ds-fundamentals/pruebas-resueltas/telco_customer_churn.ipynb
+++ b/clases/ds-fundamentals/pruebas-resueltas/telco_customer_churn.ipynb
@@ -1976,7 +1976,9 @@
     "\n",
     "\n",
     "\n",
-    "**Análisis descriptivo que lo sustenta**"
+    "\n",
+    "**Análisis descriptivo que lo sustenta**\n",
+    "\n"
    ]
   },
   {
@@ -2020,9 +2022,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Visualización 3: Correlaciones\n",
+    "#### Visualización 3: Correlaciones\n",
     "\n",
-    "**Análisis**"
+    "**Hipótesis planteadas**\n",
+    "\n",
+    "* La antiguedad de los clientes es inversamente proporcional a la probabilidad de fuga, luego de cierto umbral\n",
+    "\n",
+    "* Hay colinealidad entre las variables numéricas\n",
+    "\n",
+    "\n",
+    "**Análisis descriptivo que lo sustenta**\n",
+    "\n",
+    "* Podemos ver una relación lineal inversa entre antiguedad de los clientes y fuga, aunque no es fuerte, debe ser considerada\n",
+    "\n",
+    "* Las relaciones lineales de cobros mensuales y cargos totales son débiles, lo cual no implica que no existan pero si que no son exclusivamente lineales\n",
+    "\n",
+    "* Existe correlación lineal fuerte entre cargos totales y antiguedad de los clientes, como era esperable\n",
+    "\n",
+    "* Existe correlación lineal media entre cargos totales y cargos mensuales, esto es algo que se debe investigar"
    ]
   },
   {
