--- a/clases/machine-learning/notebook/boosting_parte_1.ipynb
+++ b/clases/machine-learning/notebook/boosting_parte_1.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fundamentos para entender los algoritmos que usan Boosting"
+    "## Fundamentos y primera generación de algoritmos que usan Boosting"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conceptos"
+    "### **Conceptos**"
    ]
   },
   {
