2da mejora : ordenamiento

--- a/clases/machine-learning/notebook/boosting_parte_1.ipynb
+++ b/clases/machine-learning/notebook/boosting_parte_1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fundamentos y primera generación de algoritmos que usan Boosting"
+    "## Fundamentos de la primera generación de algoritmos que usan Boosting"
    ]
   },
   {
@@ -562,6 +562,13 @@
     "![image.png](attachment:image.png)\n",
     "\n",
     "Fuente: https://datascience.eu/machine-learning/gradient-boosting-what-you-need-to-know/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algoritmos base utilizados en ML clásico:  Adaboost y Gradien Boosting"
    ]
   },
   {
