mejora en la clase knn regresor

--- a/clases/machine-learning/notebook/knn_regresor.ipynb
+++ b/clases/machine-learning/notebook/knn_regresor.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuración de ambiente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -106,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,15 +137,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.datasets import make_regression\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error\n",
-    "\n",
     "# Generar un dataset sintético para regresión\n",
     "X, y = make_regression(n_samples=200, n_features=1, noise=20, random_state=42)\n",
     "\n",
@@ -186,6 +184,13 @@
    "metadata": {},
    "source": [
     "## Ejemplo con dataset Kaggle: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Descripción del dataset Kaggle: "
    ]
   },
   {
