--- a/mitic-data-science-team-1-septiembre-2024/advance-machine-learning/clases/clase 2 - K-means y DBSCAN.ipynb
+++ b/mitic-data-science-team-1-septiembre-2024/advance-machine-learning/clases/clase 2 - K-means y DBSCAN.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/wzc8k1dn7bsgd14yfq9md5l40000gn/T/ipykernel_15335/1480040078.py:11: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "/var/folders/02/wzc8k1dn7bsgd14yfq9md5l40000gn/T/ipykernel_34503/2402893408.py:5: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  plt.scatter(X[:, 0], X[:, 1], s=30, cmap='viridis')\n"
      ]
     },
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/wzc8k1dn7bsgd14yfq9md5l40000gn/T/ipykernel_15335/3135500852.py:5: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
+      "/var/folders/02/wzc8k1dn7bsgd14yfq9md5l40000gn/T/ipykernel_34503/3135500852.py:5: UserWarning: No data for colormapping provided via 'c'. Parameters 'cmap' will be ignored\n",
       "  plt.scatter(X[:, 0], X[:, 1], s=30, cmap='viridis')\n"
      ]
     },
@@ -261,8 +261,8 @@
     "$$\n",
     "\n",
     "Donde:\n",
-    "- $a(i)$: Distancia promedio entre un punto $i$ y los otros puntos del mismo cluster.\n",
-    "- $b(i)$: Distancia promedio entre un punto $i$ y los puntos del cluster más cercano al que no pertenece.\n",
+    "- $a(i)$: Distancia promedio entre un punto $i$ y los otros puntos del mismo cluster. (cohesión interna)\n",
+    "- $b(i)$: Distancia promedio entre un punto $i$ y los puntos del cluster más cercano al que no pertenece. (separación externa)\n",
     "\n",
     "**Interpretación del Score:**\n",
     "- **Silhouette Score** está en el rango $[-1, 1]$:\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
     "X, y = make_moons(n_samples=300, noise=0.05, random_state=42)\n",
     "\n",
     "# Aplicar DBSCAN\n",
-    "dbscan = DBSCAN(eps=0.2, min_samples=5)\n",
+    "dbscan = DBSCAN(eps=0.3, min_samples=5)\n",
     "clusters = dbscan.fit_predict(X)\n",
     "\n",
     "# Visualizar los clusters generados por DBSCAN\n",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -611,12 +611,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Tarea en clase\n",
+    "\n",
+    "Crear el cluster usando lo entregado anteriormente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Optimización usando param grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
