--- a/mitic-data-science-team-1-septiembre-2024/advance-machine-learning/clases/clase3 - Redes Neuronales.ipynb
+++ b/mitic-data-science-team-1-septiembre-2024/advance-machine-learning/clases/clase3 - Redes Neuronales.ipynb
@@ -26,27 +26,33 @@
    "metadata": {},
    "source": [
     "1. Crear un nuevo ambiente llamado deep_learning\n",
-    "conda create -n deep_learning python=3.10 -y\n",
+    "\n",
+    "* conda create -n deep_learning python=3.10 -y\n",
     "\n",
     "2. Activar el ambiente\n",
-    "conda activate deep_learning\n",
+    "\n",
+    "* conda activate deep_learning\n",
     "\n",
     "3. Instalar TensorFlow y Keras (Keras viene incluido con TensorFlow)\n",
-    "pip install tensorflow\n",
+    "\n",
+    "* pip install tensorflow\n",
     "\n",
     "4. Instalar bibliotecas adicionales para visualización y manejo de datos\n",
-    "pip install matplotlib seaborn pandas numpy\n",
+    "\n",
+    "* pip install matplotlib seaborn pandas numpy\n",
     "\n",
     "5. Instalar Jupyter Lab y configurarlo para VS Code\n",
-    "pip install jupyterlab ipykernel\n",
-    "python -m ipykernel install --user --name=deep_learning --display-name \"Python (deep_learning)\"\n",
+    "\n",
+    "* pip install jupyterlab ipykernel\n",
+    "* python -m ipykernel install --user --name=deep_learning --display-name \"Python (deep_learning)\"\n",
     "\n",
     "6. Verificar las versiones instaladas (opcional)\n",
-    "python -c \"import tensorflow as tf; print('TensorFlow:', tf.__version__)\"\n",
-    "python -c \"import matplotlib; print('Matplotlib:', matplotlib.__version__)\"\n",
-    "python -c \"import seaborn; print('Seaborn:', seaborn.__version__)\"\n",
-    "python -c \"import pandas as pd; print('Pandas:', pd.__version__)\"\n",
-    "python -c \"import numpy as np; print('NumPy:', np.__version__)\"\n",
+    "\n",
+    "* python -c \"import tensorflow as tf; print('TensorFlow:', tf.__version__)\"\n",
+    "* python -c \"import matplotlib; print('Matplotlib:', matplotlib.__version__)\"\n",
+    "* python -c \"import seaborn; print('Seaborn:', seaborn.__version__)\"\n",
+    "* python -c \"import pandas as pd; print('Pandas:', pd.__version__)\"\n",
+    "* python -c \"import numpy as np; print('NumPy:', np.__version__)\"\n",
     "\n",
     "7. Configurar VS Code\n",
     " - Instalar el plugin \"Jupyter\" en VS Code.\n",
@@ -65,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +462,7 @@
    "metadata": {},
    "source": [
     "Consideremos un ejemplo más grande: clasificar imágenes de dígitos escritos a mano (del 0 al 9) usando un conjunto de datos como MNIST.\n",
+    "[Video aquí](https://www.youtube.com/watch?v=jKCQsndqEGQ&t=999s)\n",
     "\n",
     "1. **Datos de entrada**:  \n",
     "   Cada imagen tiene un tamaño de $28 \\times 28$ píxeles, lo que equivale a $784$ píxeles en total. Estos se aplanan en un vector de entrada:  \n",
@@ -516,15 +523,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 1us/step\n",
       "Epoch 1/5\n"
      ]
     },
@@ -540,18 +545,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - accuracy: 0.8959 - loss: 0.3373 - val_accuracy: 0.9822 - val_loss: 0.0590\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 6ms/step - accuracy: 0.8935 - loss: 0.3411 - val_accuracy: 0.9805 - val_loss: 0.0630\n",
       "Epoch 2/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - accuracy: 0.9847 - loss: 0.0491 - val_accuracy: 0.9872 - val_loss: 0.0432\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 6ms/step - accuracy: 0.9847 - loss: 0.0488 - val_accuracy: 0.9831 - val_loss: 0.0548\n",
       "Epoch 3/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - accuracy: 0.9906 - loss: 0.0308 - val_accuracy: 0.9875 - val_loss: 0.0429\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 6ms/step - accuracy: 0.9908 - loss: 0.0315 - val_accuracy: 0.9861 - val_loss: 0.0468\n",
       "Epoch 4/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 6ms/step - accuracy: 0.9933 - loss: 0.0216 - val_accuracy: 0.9899 - val_loss: 0.0361\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 6ms/step - accuracy: 0.9931 - loss: 0.0213 - val_accuracy: 0.9862 - val_loss: 0.0438\n",
       "Epoch 5/5\n",
-      "\u001b[1m1500/1500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 6ms/step - accuracy: 0.9945 - loss: 0.0168 - val_accuracy: 0.9887 - val_loss: 0.0396\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9865 - loss: 0.0378\n",
+      "\u001b[1m1407/1407\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.9951 - loss: 0.0158 - val_accuracy: 0.9899 - val_loss: 0.0411\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.9875 - loss: 0.0367\n",
       "Accuracy en el conjunto de prueba: 0.99\n",
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step\n"
      ]
     },
     {
@@ -638,7 +643,7 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "# Entrenar el modelo\n",
-    "history = model.fit(x_train, y_train, epochs=5, validation_split=0.2)\n",
+    "history = model.fit(x_train, y_train, epochs=5, validation_split=0.25)\n",
     "\n",
     "# Evaluar el modelo en el conjunto de prueba\n",
     "test_loss, test_accuracy = model.evaluate(x_test, y_test)\n",
@@ -654,11 +659,6 @@
     "    plt.axis('off')\n",
     "    plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
